test/typeCheckTest/fail/test22.ic
class BadNegative {
	void main (string [] args) {
		int x = -true;
	}
}